# Algorithms

./: .gitignore  AllTests.sln  CMakeLists.txt  README.md
Algorithms/: CMakeLists.txt  Main.cpp  Main.cpp.orig
Algorithms/DivideConquer/: CountingSort.h  HeapSort.h  Inverse.h  Inverse_recursive.h  MergeSort.h  Multiply.h  Point_and_sections.h  Quick_sort.h  quick_sort_3.h
Algorithms/Dynamic/: BackPack.h  EditingDistance.h  LisBottomUp.h  stairs.h
Algorithms/General/: Fibonachi.h  simple_value.h
Algorithms/Graphs/: BFS.h  DFS.h  Eulerian_path.h  graph_utils.h
Algorithms/Greedy/: BackPackTask.h  CMakeLists.txt  MinPoints.h  PriorQueue.h
AllTests/: AllTests.vcxproj  AllTests.vcxproj.filters  BackPackTask.h  BinaryFind.h  Fibonachi.h  Hafman_simple.h  Main.cpp  MinPoints.h  Point_and_sections.h  PriorQueue.h  RecursiveMergeSort.h  RecursiveQuickSort.h  k_num.h
AllTests/Debug/: main.obj.enc  vc141.idb
AllTests/Debug/AllTests.tlog/: AllTests.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
AllTests/General/: GCD.h
AllTests/x64/Debug/: vc140.idb  vc141.idb
AllTests/x64/Debug/AllTests.tlog/: AllTests.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/: AllTests.ilk
x64/Debug/: AllTests.ilk
